<resources>
    <string name="app_name">Challenge3</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hai_binarian">Hai Binarian</string>
    <string name="tombol_keranjang">Tombol Keranjang</string>
    <string name="mau_makan_apa_hari_ini">Mau makan apa hari ini?</string>
    <string name="tombol_profile">Tombol Profile</string>
    <string name="pesan_makanan_dengan_aplikasi_dan_dapatkan_diskonmu">Pesan Makanan dengan aplikasi dan dapatkan diskonmu</string>
    <string name="discount_30">Discount 30%</string>
    <string name="list_menu_makanan">List Menu Makanan</string>
    <string name="nama_makanan">Nama</string>
    <string name="harga">Harga</string>
    <string name="deskripsi_foto">deskripsi foto</string>
    <string name="food_price">Food Price</string>
    <string name="food_name">Food Name</string>
    <string name="ini_adalah_deskripsi_makanan_yang_begini_begini_saja">Ini adalah deskripsi makanan yang begini begini saja</string>
    <string name="lokasi">Lokasi</string>
    <string name="jl_toko_lokasi_ini_adalah_toko_nya_alamat_wlalfeamgmaegmae">Jl. Toko Lokasi ini adalah toko nya alamat wlalfeamgmaegmae</string>
    <string name="add">+</string>
    <string name="_1">1</string>
    <string name="subtract">-</string>
    <string name="tambah_ke_keranjang_harga">Tambah Ke Keranjang - Harga</string>
    <string name="riwayat">Riwayat</string>
    <string name="profile">Profile</string>
    <string name="keranjang">Keranjang</string>
    <string name="home">Home</string>
    <string name="tv_keranjang">Keranjang</string>
    <string name="contohHarga">Rp. 10.000</string>
    <string name="catatan">Catatan:</string>
    <string name="tv_riwayat">Riwayat</string>
    <string name="pesan">Pesan</string>
    <string name="total_harga">Total Harga</string>
    <string name="tv_profile">Profile</string>
    <string name="no_telepon">No. Telepon</string>
    <string name="contoh_no_telepon">+62 878-0989-2132</string>
    <string name="contoh_email">user@example.com</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="kavarera">kavarera</string>
    <string name="username">Username</string>
    <string name="profile_image">Profile Image</string>
    <string name="konfirmasi">Konfirmasi</string>
    <string name="cancel_editing">cancel editing</string>
    <string name="button_for_change_list_layout">button for change list layout</string>
    <string name="button_for_turn_on_edit_mode">button for turn on edit mode</string>
    <string name="konfirmasi_pesanan">Konfirmasi Pesanan</string>
    <string name="metode_pengiriman">Metode Pengiriman</string>
    <string name="ambil_sendiri">Ambil Sendiri</string>
    <string name="dikirim">Dikirim</string>
    <string name="tunai">Tunai</string>
    <string name="pesanan_berhasil">PESANAN BERHASIL</string>
    <string name="dont_have_an_account">Dont have an account?</string>
    <string name="register">Register</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="login">Login</string>
    <string name="empty_carts">Empty Carts</string>
    <string name="back_button">back button</string>
    <string name="decrease_item">decrease item</string>
    <string name="confirmation">Confirmation</string>
    <string name="confirm">Confirm</string>
    <string name="input_your_old_password">Input Your Old Password</string>
    <string name="new_password">New Password</string>
    <string name="sign_out">Sign out</string>
    <string name="title_snackbar">Title Snackbar</string>
    <string name="loading">Loading</string>
    <string name="food_detail_image">food detail image</string>
    <string name="error_example_message">This is a description for texxt snackbar error, you can explain why errors occurs</string>
    <string name="pesanan_berhasil2">Pesanan Berhasil</string>
    <string name="kembali_ke_home">Kembali Ke Home</string>
    <string name="metode_pembayaran">Metode Pembayaran</string>
    <string name="dompet_digital">Dompet Digital</string>
    <string name="sate_ayam">Sate Ayam</string>
    <string name="plus">+</string>

    <integer-array name="foto_makanan">
        <item>@color/black</item>
        <item>@color/black</item>
        <item>@color/black</item>
        <item>@color/black</item>
        <item>@color/black</item>
        <item>@color/black</item>
        <item>@color/black</item>
        <item>@color/black</item>
        <item>@color/black</item>
        <item>@color/black</item>
        <item>@color/black</item>
        <item>@color/black</item>
        <item>@color/black</item>
    </integer-array>
    <string-array name="gmaps_url">
        <item>https://maps.app.goo.gl/KggSzrdZ77yXWCmd7</item>
        <item>https://maps.app.goo.gl/FVf28uYBDgUZbPc96</item>
        <item>https://maps.app.goo.gl/beVfSSERa9G96DZi6</item>
        <item>https://maps.app.goo.gl/VDuSyK3BFdvuy9Wt8</item>
        <item>https://maps.app.goo.gl/1vQ47BCFPua9bu6f8</item>
        <item>https://maps.app.goo.gl/aHu3oxmB5h5efko77</item>
    </string-array>


</resources>