<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pages.ProfilePages.ProfileEditActivity">

    <ImageButton
        android:id="@+id/ib_cancel_edit_profile"
        android:layout_width="30dp"
        android:layout_height="30dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/tv_profile_editmode"
        android:layout_marginStart="15dp"
        android:background="@color/transparent"
        android:src="@drawable/ic_baseline_close_24"
        android:contentDescription="@string/cancel_editing"
        />


    <TextView
        android:id="@+id/tv_profile_editmode"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/tv_profile"
        android:gravity="center_horizontal"
        />

    <ImageButton
        android:id="@+id/iv_confirm_editprofile"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/tv_profile_editmode"
        android:layout_marginEnd="15dp"
        android:src="@drawable/ic_baseline_check_24"
        android:contentDescription="@string/konfirmasi"
        android:background="@color/transparent"/>

    <ImageView
        android:id="@+id/iv_profile_image_editmode"
        android:layout_width="150dp"
        android:layout_height="150dp"

        app:layout_constraintTop_toBottomOf="@id/tv_profile_editmode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_marginTop="70dp"
        android:src="@color/black"
        android:contentDescription="@string/profile_image" />

    <TextView
        android:id="@+id/tv_label_username_editmode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/iv_profile_image_editmode"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginStart="40dp"

        android:text="@string/username"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/et_username_profile_editmode"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_label_username_editmode"
        app:layout_constraintStart_toStartOf="@id/tv_label_username_editmode"
        android:layout_marginTop="5dp"
        android:paddingVertical="10dp"
        android:paddingHorizontal="15dp"
        android:background="@color/grey"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:inputType="text"
        android:hint="@string/kavarera" />





    <TextView
        android:id="@+id/tv_label_telepon_editmode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/et_username_profile_editmode"
        app:layout_constraintStart_toStartOf="@id/tv_label_username_editmode"
        android:layout_marginTop="10dp"

        android:text="@string/no_telepon"
        android:textColor="@color/black"
        />

    <EditText
        android:id="@+id/et_telepon_profile_editmode"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_label_telepon_editmode"
        app:layout_constraintStart_toStartOf="@id/tv_label_username_editmode"
        android:layout_marginTop="5dp"
        android:paddingVertical="10dp"
        android:paddingHorizontal="15dp"
        android:background="@color/grey"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:hint="@string/contoh_no_telepon" />


</androidx.constraintlayout.widget.ConstraintLayout>