<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginBottom="10dp">

    <ImageView
        android:contentDescription="@string/deskripsi_foto"
        android:id="@+id/tv_Gimage"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:src="@color/teal_200"
        android:maxWidth="130dp"
        />
    <TextView
        android:id="@+id/tv_GnamaFood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/nama_makanan"
        android:textStyle="bold"
        android:textColor="@color/black"
        />
    <TextView
        android:id="@+id/tv_Gharga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/harga"
        android:textColor="@color/black"/>

</LinearLayout>