<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:contentDescription="@string/deskripsi_foto"
        android:id="@+id/iv_item"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:src="@color/teal_200"
        android:maxWidth="130dp"
        />
    <TextView
        android:id="@+id/tv_namaFood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/nama_makanan"
        android:textStyle="bold"
        android:textColor="@color/black"
        />
    <TextView
        android:id="@+id/tv_harga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/harga"
        android:textColor="@color/black"/>





</LinearLayout>