<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".page.LoginFragment"
    android:layout_marginHorizontal="25dp">
    <EditText
        android:id="@+id/et_username_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="150dp"
        android:autofillHints="false"
        android:hint="@string/username"
        android:paddingHorizontal="20dp"
        android:paddingVertical="15dp"
        android:textColor="@color/black"
        android:textColorHint="@color/blackHalfOp"
        android:textSize="20sp"
        android:inputType="text"
        android:drawableEnd="@drawable/ic_profile_user"
        android:background="@drawable/shape_rounded_corner_edittext"
        />

    <EditText
        android:id="@+id/et_password_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_username_login"
        app:layout_constraintStart_toStartOf="@id/et_username_login"
        app:layout_constraintEnd_toEndOf="@id/et_username_login"
        android:layout_marginTop="35dp"
        android:autofillHints="false"
        android:hint="@string/password"
        android:paddingHorizontal="20dp"
        android:paddingVertical="15dp"
        android:textColor="@color/black"
        android:textColorHint="@color/blackHalfOp"
        android:textSize="20sp"
        android:inputType="textPassword"
        android:drawableEnd="@drawable/ic_baseline_remove_red_eye_24"
        android:background="@drawable/shape_rounded_corner_edittext"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_password_login"
        app:layout_constraintEnd_toEndOf="@id/et_password_login"
        android:text="@string/forgot_your_password"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:textAlignment="viewEnd"
        android:textColor="@color/black"/>



    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_password_login"
        android:layout_marginTop="60dp"
        android:background="@drawable/shape_rounded_corner_edittext"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="25sp"
        />

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        app:layout_constraintStart_toStartOf="@id/btn_login"
        app:layout_constraintEnd_toEndOf="@id/btn_login"
        android:layout_marginTop="10dp">
        <TextView
            android:id="@+id/tv_dont_have_an_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_an_account"
            android:textColor="@color/black"
            />
        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_marginStart="4dp"
            android:text="@string/register"
            android:textColor="@color/teal_700"
            />
    </TableRow>


</androidx.constraintlayout.widget.ConstraintLayout>