<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pages.MainPages.KonfirmasiPesananFragment"
    android:paddingHorizontal="10dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_konfirmasi_pesanan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingVertical="10dp"
            android:text="@string/konfirmasi_pesanan"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_metode_pengiriman"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/metode_pengiriman"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:paddingVertical="5dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_konfirmasi_pesanan" />

        <Button
            android:id="@+id/btn_ambil_sendiri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:paddingHorizontal="40dp"
            android:text="@string/ambil_sendiri"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/btn_dikirim"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_metode_pengiriman" />

        <Button
            android:id="@+id/btn_dikirim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:paddingHorizontal="70dp"
            android:text="@string/dikirim"
            android:layout_marginEnd="5dp"

            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_metode_pengiriman" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_list_keranjang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_ambil_sendiri"
            />

        <TextView
            android:id="@+id/tv_metode_pembayaran"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/rv_list_keranjang"

            android:text="@string/metode_pembayaran"
            android:textStyle="bold"
            android:textColor="@color/black"
            />

        <Button
            android:id="@+id/btn_tunai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:paddingHorizontal="75dp"

            app:layout_constraintTop_toBottomOf="@id/tv_metode_pembayaran"
            app:layout_constraintEnd_toStartOf="@id/btn_dompet_digital"
            android:text="@string/tunai"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/btn_dompet_digital"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:paddingHorizontal="35dp"

            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_metode_pembayaran"

            android:text="@string/dompet_digital"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/tv_ringkasan_pembayaran"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@id/btn_tunai"

            android:text="Ringkasan Pembayaran"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tv_total_pembayaran"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="10dp"
            android:layout_marginStart="25dp"

            app:layout_constraintTop_toBottomOf="@id/tv_ringkasan_pembayaran"
            app:layout_constraintStart_toStartOf="@id/tv_ringkasan_pembayaran"
            android:text="Total Pembayaran"
            />

        <TextView
            android:id="@+id/tv_harga_total_pesanan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="10dp"
            android:layout_marginStart="25dp"

            android:layout_marginEnd="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_ringkasan_pembayaran"

            android:text="@string/contohHarga"
            />

        <Button
            android:id="@+id/btn_checkout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_harga_total_pesanan"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="10dp"


            android:text="Pesan"
            android:textColor="@color/black"/>



    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>