<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".page.KeranjangFragment">
    <TextView
        android:id="@+id/tv_keranjang"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingVertical="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/tv_keranjang"
        android:gravity="center_horizontal"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:listitem="@layout/item_pesanan_keranjang"
        android:paddingHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_keranjang"
        app:layout_constraintBottom_toTopOf="@id/tv_total_harga"
        android:paddingVertical="10dp"
        />
    <Button
        android:id="@+id/btn_pesan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pesan"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="15sp"
        android:paddingHorizontal="30dp"
        android:paddingVertical="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/tv_total_harga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintBottom_toTopOf="@id/tv_total_harga_pesanan"
        app:layout_constraintStart_toStartOf="@id/tv_total_harga_pesanan"


        android:text="@string/total_harga"
        android:textColor="@color/black"/>


    <TextView
        android:id="@+id/tv_total_harga_pesanan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/harga"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="20dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>





</androidx.constraintlayout.widget.ConstraintLayout>