<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".pages.Dialogs.DialogReauthenticate">


    <TextView
        android:id="@+id/tv_enter_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"


        android:text="@string/confirmation"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="15dp"
        android:textAlignment="center"
        />

    <EditText
        android:id="@+id/et_password_reauthenticate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_enter_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"

        android:textSize="20sp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="15dp"
        android:hint="@string/input_your_old_password"
        android:background="@drawable/shape_rounded_corner_edittext"
        android:inputType="textPassword"

        android:drawableEnd="@drawable/ic_baseline_remove_red_eye_24"
        android:autofillHints="password"
        />

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_password_reauthenticate"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:text="@string/confirm"
        />

</androidx.constraintlayout.widget.ConstraintLayout>